--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Any & All — Laura tager telefonen 24/7</title>
-  <meta name="description" content="Laura svarer jeres telefon døgnet rundt, ruter opkald og giver beskeder. En enkel måde at sikre, at I aldrig misser et opkald." />
-
-  <!-- Simpelt favicon (emoji i SVG) -->
+  <title>Any & All — Laura svarer 24/7</title>
+  <meta name="description" content="Laura tager imod opkald i jeres navn, viderestiller til afdelinger/medarbejdere, tager beskeder og svarer på simple spørgsmål. Døgnet rundt." />
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E📞%3C/text%3E%3C/svg%3E" />
-
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -26,29 +23,31 @@
     </div>
   </header>
 
-  <!-- Hero med personlig velkomst -->
+  <!-- Hero -->
   <section class="hero">
     <div class="container hero__wrap">
       <div class="hero__copy">
         <div class="hero__hello">
-          <div class="hello__badge">👋 Hej!</div>
-          <h1>Jeg er Laura — jeres telefonpasser <span class="nowrap">24/7</span></h1>
+          <div class="hello__badge" id="greet">Goddag</div>
+          <h1>Jeg er Laura — jeres venlige stemme <span class="nowrap">24/7</span></h1>
           <p class="lead">
-            Jeg tager telefonen, byder velkommen i jeres navn og sørger for, at opkald
-            lander det rigtige sted. Roligt, høfligt og konsekvent — hver gang.
+            Jeg byder velkommen i jeres navn, viderestiller til de rigtige afdelinger eller medarbejdere,
+            tager imod beskeder og sender dem på mail eller SMS, når I er optaget.
+            Jeg kan også besvare simple spørgsmål ud fra jeres hjemmeside og den info, I deler med os.
           </p>
         </div>
 
         <div class="hero__cta">
-          <!-- Udskift telefonnummeret og mailen nedenfor når du er klar -->
-          <a class="btn" href="tel:+4520925422">Kontakt Laura 24/7</a>
+          <!-- Skift nummeret her, når du er klar -->
+          <a class="btn" href="tel:+4512345678">Kontakt Laura 24/7</a>
           <a class="btn btn--ghost" href="#saadan">Se hvordan det virker</a>
         </div>
 
         <ul class="hero__points">
-          <li>Tryg, menneskelig velkomst på dansk</li>
-          <li>Ruter til “Salg” eller “Support” som aftalt</li>
-          <li>Viderestilling, besked og opsummering efter behov</li>
+          <li>Personlig og rolig velkomst på dansk</li>
+          <li>Viderestilling til afdeling/medarbejder efter ønske</li>
+          <li>Beskeder leveret på mail/SMS med det samme</li>
+          <li>Svar på enkle spørgsmål fra jeres offentlige info</li>
         </ul>
       </div>
 
@@ -62,14 +61,14 @@
             </div>
           </div>
           <div class="bubble">
-            Hej og velkommen til Any <span class="amp">&amp;</span> All — hvordan kan jeg hjælpe jer i dag?
+            <strong id="greetInline">Goddag</strong> og velkommen til Any <span class="amp">&amp;</span> All — hvordan kan jeg hjælpe jer i dag?
           </div>
           <ul class="quick">
-            <li>Viderestil til salg</li>
-            <li>Viderestil til support</li>
-            <li>Modtag besked på mail</li>
+            <li>Viderestil til valgt afdeling/medarbejder</li>
+            <li>Tag besked og send til teamet</li>
+            <li>Besvar simple spørgsmål</li>
           </ul>
-          <div class="note">Opsætningen matcher jeres åbningstider og ønsker.</div>
+          <div class="note">Opsætningen matcher jeres åbningstider, afdelinger og tone.</div>
         </div>
       </aside>
     </div>
@@ -82,18 +81,18 @@
       <div class="grid3">
         <div class="step">
           <div class="step__no">1</div>
-          <h3>Vi sætter jeres hilsen op</h3>
-          <p>“Hej, du taler med Laura hos <em>jeres firmanavn</em>…” — afstemt med jeres tone og behov.</p>
+          <h3>Vi sætter hilsenen op</h3>
+          <p>“Hej, du taler med Laura hos <em>jeres firmanavn</em>…” — vi matcher jeres stil og brand.</p>
         </div>
         <div class="step">
           <div class="step__no">2</div>
-          <h3>Opkald rutes korrekt</h3>
-          <p>Opkald sendes til salg, support eller besked — præcis som I ønsker det, også uden for åbningstid.</p>
+          <h3>Smart viderestilling</h3>
+          <p>Opkald går til rette afdeling eller person — eller til besked, hvis der ikke svares.</p>
         </div>
         <div class="step">
           <div class="step__no">3</div>
-          <h3>I får besked, ikke bøvl</h3>
-          <p>I får klar info pr. mail/SMS: hvem ringede, emne, og hvad der skete. Ingen mistede opkald.</p>
+          <h3>Klar besked tilbage til jer</h3>
+          <p>I modtager mail/SMS med detaljer: hvem ringede, emne og hvad der blev aftalt.</p>
         </div>
       </div>
     </div>
@@ -106,19 +105,19 @@
       <div class="grid2">
         <div class="box">
           <h3>Altid tilgængelig</h3>
-          <p>Laura svarer døgnet rundt, så kunder altid føler sig taget imod — også når I har travlt.</p>
+          <p>Kunder bliver taget venligt imod — også uden for åbningstid.</p>
         </div>
         <div class="box">
           <h3>Nemt at komme i gang</h3>
-          <p>Send os jeres ønsker, telefonnummer og teams — vi klarer resten. I kan ændre når som helst.</p>
+          <p>Del jeres afdelinger, åbningstider og ønsker — vi klarer resten.</p>
         </div>
         <div class="box">
           <h3>Personlig oplevelse</h3>
-          <p>Vi taler pænt, tydeligt og på dansk. Velkomst og rute passer til jeres brand.</p>
+          <p>Dansk tale, rolig tone og jeres navn. Ingen scripts, bare god kundeservice.</p>
         </div>
         <div class="box">
           <h3>Skalerbart</h3>
-          <p>Fra enkeltmandsvirksomhed til større teams. Laura bliver ikke træt — hun hjælper bare.</p>
+          <p>Fra solo til større teams. Laura skalerer med jeres behov.</p>
         </div>
       </div>
     </div>
@@ -132,7 +131,6 @@
         Svar på et par spørgsmål, så sætter vi jeres velkomst og rutevej op. Det er enkelt.
       </p>
 
-      <!-- Enkel “opret virksomhed”-formular -->
       <form class="form" method="POST" action="mailto:support@anyandall.dk" enctype="text/plain">
         <div class="grid2">
           <label>
@@ -156,24 +154,19 @@
             <input name="telefon" required placeholder="+45 xx xx xx xx" />
           </label>
           <label>
-            Hvilke valg?
-            <select name="valg">
-              <option>Salg & Support</option>
-              <option>Kun Salg</option>
-              <option>Kun Support</option>
-              <option>Egne (skriv i besked)</option>
-            </select>
+            Afdelinger / rute
+            <input name="rute" placeholder="Fx Reception, Salg, Teknik, Økonomi..." />
           </label>
         </div>
         <label>
           Besked / ønsker til velkomst
-          <textarea name="besked" rows="5" placeholder="Skriv fx ønsket velkomst, åbningstider, hvor vi skal viderestille osv."></textarea>
+          <textarea name="besked" rows="5" placeholder="Skriv fx ønsket velkomst, åbningstider, hvor vi skal viderestille, svar vi må give osv."></textarea>
         </label>
         <div class="form__actions">
           <button class="btn" type="submit">Send til os</button>
-          <a class="btn btn--ghost" href="tel:+4520925422">Eller ring til Laura nu</a>
+          <a class="btn btn--ghost" href="tel:+4512345678">Eller ring til Laura nu</a>
         </div>
-        <div class="form__hint">Når vi modtager jeres oplysninger, vender vi hurtigt tilbage og kobler Laura på.</div>
+        <div class="form__hint">Vi vender hurtigt tilbage og kobler Laura på.</div>
       </form>
     </div>
   </section>
@@ -190,7 +183,18 @@
       <div class="foot__copy">© <span id="y"></span> Any & All. Alle rettigheder forbeholdes.</div>
     </div>
     <script>
-      document.getElementById('y').textContent = new Date().getFullYear();
+      // Dynamisk hilsen (Godmorgen/Goddag/Godaften)
+      (function(){
+        var h = new Date().getHours();
+        var txt = (h >= 5 && h < 10) ? "Godmorgen" :
+                  (h >= 10 && h < 18) ? "Goddag" : "Godaften";
+        var el = document.getElementById('greet');
+        var el2 = document.getElementById('greetInline');
+        if (el) el.textContent = txt + " 👋";
+        if (el2) el2.textContent = txt;
+        // Årstal i footer
+        document.getElementById('y').textContent = new Date().getFullYear();
+      })();
     </script>
   </footer>
 </body>
